--- a/static/meetings.css
+++ b/static/meetings.css
@@ -1,12 +1,155 @@
-nav{
+ul.meetbar {
+    list-style-type: none;
+    text-align: right;
+    margin-top: 70px;
+    margin-right: 40px;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #d1d1d1;
+  }
+
+article {
+  margin-left: 300px;
+  margin-bottom: 40px;
+  width: 700px;
+}
+
+#upcoming{
+  margin-top: 30px;
+  height: fit-content;
+  min-height: 80px;
+  width: 1150px;
+  border-radius: 15px;
+  background-color: #fc7675;
+}
+
+#undecided{
+    margin-top: 30px;
+    height: fit-content;
+    min-height: 80px;
+    width: 1150px;
+    border-radius: 15px;
+    background-color: orange;
+}
+
+#completed {
+    margin-top: 30px;
+    height: fit-content;
+    min-height: 80px;
+    width: 1150px;
+    border-radius: 15px;
+    background-color: #758283;
+  }
+
+
+.btnpos button {
+  border-radius: 15px;
+  font-size: 20px;
+  background-color: black;
+  color: white;
+}
+.seperator {
+  border-left: 3px solid black;
+  margin-left: 8px;
+  margin-right: 10px;
+}
+.timedate {
+  margin-top: -27px;
+  margin-left: 910px;
+}
+.btnpos {
+  margin-left: 455px;
+  padding-bottom: 20px;
+}
+  .sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 100px;
+    left: 0;
     background-color: #233554;
-     height: 70px; 
-    font-family: Open Sans;
-font-style: normal;
-}
-#a,#b,#c,#d,#e{
-    margin-right: 150px;
-}
-.nav-item{
-    margin-top: 15px;
-}
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    border-top-right-radius: 15px;
+    box-shadow: 0px 15px 25px 17px rgba(0, 0, 0, 0.25);
+  }
+  
+  .sidenav a {
+    padding: 8px 8px 8px 8px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #f1f1f1;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidenav a:hover:not(.closebtn) {
+    font-size: 26px;
+    color: #f1f1f1;
+    font-weight: bolder;
+  }
+  
+  .sidenav .closebtn {
+    position: absolute;
+    color: #233554;
+    top: -5px;
+    font-size: 36px;
+    margin-left: 180px;
+  }
+  
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
+
+  
+
+  .insidehamburger {
+    position: absolute;
+    top: 40px;
+    width: 95%;
+    height: 55px;
+    background-color: #f1f1f1;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    }
+
+    #dot{
+      position: absolute;
+      width: 18px;
+      height: 18px;
+      left: 200px;
+      top: 45px;
+      border-radius: 50%;
+      background: #FFFFFF;
+    
+    }
+
+    #dot1{
+      position: absolute;
+      width: 15px;
+      height: 15px;
+      left: 219px;
+      top: 256px;
+      border-radius: 50%;
+      background: #FFFFFF;
+    
+    }
+
+  #outsideham {
+      padding-left: 20px;
+      margin-top: 50px;
+      width: 70px;
+      height: fit-content;
+      color: #f1f1f1;
+      background-color: #233554;
+      border-top-right-radius: 20px;
+      border-bottom-right-radius: 20px;
+  }
+  .dropdown{
+      margin-left: 100px;
+  }
