--- a/templates/updateAppointment.html
+++ b/templates/updateAppointment.html
@@ -50,6 +50,8 @@
         <span class="menu" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
     </div>
     </p>
+
+    <img src="../static/imgs/upapp.png" style="height:600x; width:600px; margin-top:-50px;">  
     
 {% comment %} <div id="Donebtn">
     <button id="donebutton" type ="submit" value= "Done" >
@@ -89,7 +91,7 @@
     <input type="time" class="timebox" id="meettime" name="time" required>
 
 
-    <input id="donebutton" class="Donebtn" type ="submit" value= "Done" >
+    <input id="donebutton" class="Donebtn" type ="submit" value= "Done" style="margin-bottom:30px;">
 </form>
 
 <script>
