--- a/templates/addAppointment.html
+++ b/templates/addAppointment.html
@@ -46,6 +46,8 @@
            </p>
     
 
+           <img src="../static/imgs/cl.png" style="height:650x; width:650px; margin-top:-110px;">  
+
    
 
 <form action="addAppointment" method="post">
@@ -82,6 +84,8 @@
     <!--<input class="timebox" id= "meetTime"  name="time" placeholder="Meeting Timing (Ex: 9:00 AM)">-->
 
     <input type="time" class="timebox" id="meettime" name="time" required>
+
+    <input class="emailbox" id="email" name="email" required placeholder="Member's emails:">
 
 
     <input id="donebutton" class="Donebtn" type ="submit" value= "Done" >
